--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
   ],
   "dependencies": {
     "leaflet": "^1.0.1",
-    "leaflet.markercluster": "Leaflet.markercluster#^1.0.0"
+    "leaflet.markercluster": "Leaflet.markercluster#^1.0.0",
+    "lodash": "^4.16.6",
+    "mobile-detect": "mobile-detect.js#^1.3.3"
   }
 }
